Omnibox - Delete Broken Auto-Generated Custom Search Engines

This prevents the user from trying to use them again and being
frustrated again.

Tested using my personal profile.  Did some searches
using search engines that don't work any more
and noticed they were deleted.  Tried some searches using
default search engines and other custom search engines that
yielded responses and noticed they were not deleted.

Bug: 737775
Change-Id: Ibf1a32c46d6ce71d6374555eab8844ff9646cbe7