chrome/browser/ui/omnibox/chrome_omnibox_navigation_observer.h
@@ -20,6 +20,7 @@
 
 class Profile;
 class ShortcutsBackend;
+class TemplateURLService;
 
 namespace net {
 class URLFetcher;
@@ -28,7 +29,7 @@ class URLFetcher;
 // Monitors omnibox navigations in order to trigger behaviors that depend on
 // successful navigations.
 //
-// Currently two such behaviors exist:
+// Currently three such behaviors exist:
 // (1) For single-word queries where we can't tell if the entry was a search or
 //     an intranet hostname, the omnibox opens as a search by default, but this
 //     class attempts to open as a URL via an HTTP HEAD request.  If successful,
@@ -36,6 +37,8 @@ class URLFetcher;
 //     AlternateNavInfoBarDelegate.
 // (2) Omnibox navigations that complete successfully are added to the
 //     Shortcuts backend.
+// (3) Omnibox searches that result in a 404 for an auto-generated custom
+//     search engine cause the custom search engine to be deleted.
 //
 // Please see the class comment on the base class for important information
 // about the memory management of this object.
@@ -62,6 +65,9 @@ class ChromeOmniboxNavigationObserver : public OmniboxNavigationObserver,
   // occurs.  Such navigations don't trigger an immediate NAV_ENTRY_PENDING and
   // must be handled separately.
   void OnSuccessfulNavigation();
+
+  // Called when a navigation that yields a 404 ("Not Found") occurs.
+  void On404();
 
  private:
   enum FetchState {
@@ -95,6 +101,7 @@ class ChromeOmniboxNavigationObserver : public OmniboxNavigationObserver,
   const base::string16 text_;
   const AutocompleteMatch match_;
   const AutocompleteMatch alternate_nav_match_;
+  TemplateURLService* template_url_service_;
   scoped_refptr<ShortcutsBackend> shortcuts_backend_;  // NULL in incognito.
   std::unique_ptr<net::URLFetcher> fetcher_;
   LoadState load_state_;
